      locales are often out of sync with the C library in that context.
      Thanks to the Debian Perl maintainers for the idea.
    - In catman mode, never try to guess whether a page argument is a
      section, as it's too easy to get this wrong (LP: #664211).
    - mandb should no longer repeatedly rescan manual page hierarchies when
      a whatis entry turns into a broken link.

 -- Colin Watson <cjwatson@debian.org>  Mon, 15 Nov 2010 23:53:39 +0000

man-db (2.5.7-6) unstable; urgency=low

  * Move po/fr.gmo aside during build so that it gets regenerated based on
    translation-fr.patch, and build-depend directly on gettext for this
    (closes: #598066).

 -- Colin Watson <cjwatson@debian.org>  Thu, 14 Oct 2010 17:59:18 +0100

man-db (2.5.7-5) unstable; urgency=low

  * Use CFLAGS and LDFLAGS from hardening-includes, since man and mandb are
    optionally setuid man.
  * Update French translation from Translation Project (thanks, David
    Prévot; closes: #598621).
  * Make sure that man/po4a/po/* are kept unchanged during a
    patch/build/clean cycle.
  * Update French documentation translation from Translation Project
    (thanks, David Prévot; closes: #598066).

 -- Colin Watson <cjwatson@debian.org>  Tue, 05 Oct 2010 14:44:06 +0100

man-db (2.5.7-4) unstable; urgency=low

  * Backport from trunk:
    - Fix a regression introduced in 2.5.7 when running catman in some
      locales, most notably in the C locale: while converting the output to
      UTF-8, iconv was run after the compressor rather than before it
      (closes: #593350, LP: #615045).

 -- Colin Watson <cjwatson@debian.org>  Tue, 17 Aug 2010 14:54:04 +0100

man-db (2.5.7-3) unstable; urgency=low

  * Remove unused build-dependency on gettext.
  * Check for VxID as well as envID in /proc/self/status (closes: #579551).

 -- Colin Watson <cjwatson@debian.org>  Wed, 28 Apr 2010 18:06:49 +0100

man-db (2.5.7-2) unstable; urgency=low

  * Add a watch file.
  * Backport from trunk: