@@ -1,3 +1,4 @@
+build
 files
 man-db
 templates
