@@ -1,6 +1,6 @@
 #! /usr/bin/make -f
 %:
-	dh $@
+	dh --builddirectory=debian/build $@
 
 DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
@@ -30,20 +30,6 @@ override_dh_auto_configure:
 	            --with-compress=compress --with-bzip2=bzip2 \
 		    --with-lzma=lzma \
 		    --with-sections='1 n l 8 3 2 3posix 3pm 3perl 5 4 9 6 7'
-
-override_dh_auto_build:
-	set -e; for preserve in man/po4a/po/*.pot man/po4a/po/*.po; do \
-		[ ! -e "$$preserve.safe" ] || continue; \
-		cp -a "$$preserve" "$$preserve.safe"; \
-	done
-	dh_auto_build
-
-override_dh_auto_clean:
-	dh_auto_clean
-	set -e; for preserve in man/po4a/po/*.pot man/po4a/po/*.po; do \
-		[ -e "$$preserve.safe" ] || continue; \
-		mv "$$preserve.safe" "$$preserve"; \
-	done
 
 override_dh_clean:
 	dh_clean -Xxmalloc.c.orig
